Bug 1643149 [Wayland] Fix MozContainer deadlock, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D78278