widget/gtk/WindowSurfaceWayland.cpp
@@ -1079,8 +1079,9 @@ void WindowSurfaceWayland::CommitWaylandBuffer() {
     return;
   }
 
-  auto unlockContainer =
-      MakeScopeExit([&] { moz_container_wayland_surface_unlock(container); });
+  auto unlockContainer = MakeScopeExit([&] {
+    moz_container_wayland_surface_unlock(container, &waylandSurface);
+  });
 
   wl_proxy_set_queue((struct wl_proxy*)waylandSurface,
                      mWaylandDisplay->GetEventQueue());
@@ -1124,6 +1125,9 @@ void WindowSurfaceWayland::CommitWaylandBuffer() {
   mWaylandBuffer->Attach(waylandSurface);
   mLastCommittedSurface = waylandSurface;
   mLastCommitTime = g_get_monotonic_time() / 1000;
+
+  // Unlock surface now as SyncBegin()
+  moz_container_wayland_surface_unlock(container, &waylandSurface);
 
   // Ask wl_display to start events synchronization. We're going to wait
   // until all events are processed before next WindowSurfaceWayland::Lock()
